FEAT: microservicesproject Problem: addition of new files Solution: updated files

--- a/cloud-config-server/build.gradle
+++ b/cloud-config-server/build.gradle
@@ -20,6 +20,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-config'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation group: 'org.springframework.cloud', name: 'spring-cloud-config-server', version: '3.0.3'
+
 }
 
 dependencyManagement {
